syntax = "proto3";
option go_package = "github.com/shishir9159/kapetanios/proto";

message CreateRequest {
  bool backupSuccess = 1;
  bool renewalSuccess = 2;
  bool restartSuccess = 3;
  uint32 retryAttempt = 4;
  string err = 5;
  string log = 6;
}

message CreateResponse {
  bool proceedNextStep = 1;
  bool skipRetryCurrentStep = 2;
}

service Renewal {
  rpc StatusUpdate(CreateRequest) returns (CreateResponse);
}